--- a/src/componants/navbar/navbar.css
+++ b/src/componants/navbar/navbar.css
@@ -13,3 +13,12 @@
 .navbar .date {
     color: aqua;
 }
+.addhabit{
+    cursor: pointer;
+    padding: 5px 10px;
+    font-size: 15px;
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    border: none;
+}
